# chess

./: Cargo.toml  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.module.css  App.tsx  ChessMatch.tsx
client/src/styles/: App.module.css  ChessBoard.module.css  ChessMatch.module.css  index.css
client/src/three/: Pawn.ts  bishop.ts  board.ts  kingQueen.ts  knight.ts  main.ts  material.ts  rook.ts
client/src/utils/: ChessBoard.tsx  PieceFormation.ts  TileMovement.tsx  Tiles.tsx  WSMovement.tsx  sharedSignals.ts  three.d.ts  types.ts
migrations/: 0001_user.sql  0002_match.sql  0003_games.sql  0004_test.sql  0005_movement.sql  0006_testfix.sql  0007_matchfunc.sql
src/: main.rs
src/api/: db.rs  mod.rs  router.rs  state.rs
src/api/controllers/: chess.rs  game.rs
