[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
http = "0.2.9"
serde = "1.0.181"
serde_json = "1.0.104"
sqlx = { version= "0.7",  features=["runtime-tokio", "postgres"]}
tokio = {version="1.29.1", features=["full"]}
tower = "0.4.13"
tower-http = {version="0.4.3", features=["full"]}
tracing-subscriber = "0.3.17"
